--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Tajuplné říše - bodování</title>
-  <meta name="description" content="Fantasy Realms: App of Scoring">
+  <meta name="description" content="Tajuplné říše: bodovací app">
   <meta name="author" content="Jimmy Praet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="msapplication-TileColor" content="#ffffff">
