--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Tajuplné říše: bodování app</title>
+  <title>Tajuplné říše: bodovací app</title>
   <meta name="description" content="Tajuplné říše: bodovací app">
   <meta name="author" content="Jimmy Praet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
