--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   </script>
   <div id="container">
     <div id="header">
-      <img src="img/fantasy-realms.jpg" style="height: 3rem;"></img>
+      <a href="./tests.html"><img src="img/fantasy-realms.jpg" style="height: 3rem;"></img></a>
       <div id="header-right">
         <div id="hand-info">
           <span id="cardCount">0</span><span class="separator">/</span><span id="cardLimit">7</span>
