--- a/Trezor.html
+++ b/Trezor.html
@@ -825,7 +825,7 @@ const locksP = [
 ]; 
 
 const locksQ = [
-	 { name: "A", coordinates: [{ row: 0, col: 2 }, { row: 1, col: 2 }, { row: 4, col: 2 }] },
+	 { name: "A", coordinates: [{ row: 0, col: 2 }, { row: 1, col: 2 }, { row: 2, col: 2 }, { row: 4, col: 2 }] },
 	 { name: "B", coordinates: [{ row: 0, col: 4 }, { row: 2, col: 4 }, { row: 5, col: 4 }] },
 	 { name: "C", coordinates: [{ row: 2, col: 6 }, { row: 3, col: 6 }, { row: 4, col: 6 }] },
 	 { name: "D", coordinates: [{ row: 1, col: 1 }, { row: 1, col: 2 }, { row: 1, col: 3 }, { row: 1, col: 5 }] },
