--- a/Trezor.html
+++ b/Trezor.html
@@ -190,27 +190,30 @@
       }
       .skimmer { padding: 5px; }
     }
-		/* Modální okno */
-	.modal {
-	  display: none;
-	  position: fixed;
-	  z-index: 1;
-	  padding-top: 60px;
-	  left: 0;
-	  top: 0;
-	  width: 100%;
-	  height: 100%;
-	  overflow: auto;
-	  background-color: rgb(0,0,0);
-	  background-color: rgba(0,0,0,0.4);
-	}
+
+	 
+	/* Základní styl pro modální okno */
+    .modal {
+    display: none; /* Skryté ve výchozím stavu */
+    position: fixed; /* Zůstane na jednom místě i při skrolování */
+    z-index: 1; /* Zajištění, že bude nad ostatním obsahem */
+    padding-top: 60px;
+    left: 0;
+    top: 0;
+    width: 100%; /* Plná šířka */
+    height: 100%; /* Plná výška */
+    overflow: auto; /* Povolí skrolování v případě potřeby */
+    background-color: rgb(0,0,0); /* Fallback barva */
+    background-color: rgba(0,0,0,0.4); /* Černý s průhledností */
+    }
 
 	/* Obsah modálního okna */
 	.modal-content {
 	  background-color: #fefefe;
-	  margin: 5% auto;
+	  margin: 5% auto; /* 5% odshora a vystředění */
 	  padding: 20px;
 	  border: 1px solid #888;
+	  border-radius: 15px; /* Zaoblené rohy */
 	  width: 80%;
 	}
 
